--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ PORT = 3000
 
 MONGO_URI=mongodb+srv://plazajulzchristian_db_user:7*YjHvjnVrhZhSV@cluster0.ech3mpx.mongodb.net/pet_db?appName=Cluster0
 
+JWT_SECRET = secretkey
